Add support for multiline "Comments" in Tools => Media Information
Add support for multiline "Comments" in Tools => Media Information
Add support for multiline "Comments" in Tools => Media Information
changed milestone to %2.0 feature freeze
added Status::fixed label
closed
commit 6bdbc1d3 Author: Jean-Baptiste Kempf jb@videolan.org Date: Mon Apr 25 23:02:49 2011 +0200
Qt: support multi-line comments
As stupid demuxers like Xiph's only know comments...
Close [#3437](https://code.videolan.org/videolan/vlc/-/issues/3437)
Original author: jb@videolan.org
VideoLAN code repository instance