Qt: support multi-line comments

As stupid demuxers like Xiph's only know comments...
Close #3437